# AoCC

./: .clang-tidy  .gitignore  CMakeLists.txt  README.md  cvector.h  day01.h  day02.h  day03.h  day04.h  day05.h  day06.h  day07.h  day08.h  fenwick.h  helper.h  helpers.h  main.c  parallelize.h  session.txt  timer.c  timer.h  two_part_result.h
res/: cvector_utils.h  gheap.h
scripts/: pyproject.toml
scripts/res/: day_template.jinja2
src/: main.c
src/2022/: day01.c  day01.h  day02.c  day02.h  year22.c  year22.h
src/2023/: day01.c  day01.h  day02.c  day02.h  day03.c  day03.h  day04.c  day04.h  day05.c  day05.h  day06.c  day06.h  day07.c  day07.h  day08.c  day08.h  day09.c  day09.h  day10.c  day10.h  day11.c  day11.h  day12.c  day12.h  day13.c  day13.h  day14.c  day14.h  day15.c  day15.h  day16.c  day16.h  day17.c  day17.h  day18.c  day18.h  day19.c  day19.h  day20.c  day20.h  (+12 more)
src/util/: aoc.c  aoc.h  aoc_parse.c  aoc_parse.h  aoc_solution_manager.c  aoc_solution_manager.h  aoc_solving.c  aoc_solving.h  aoc_types.c  aoc_types.h  fenwick.c  fenwick.h  helpers.c  helpers.h  ll_tuple.c  ll_tuple.h  parallelize.c  parallelize.h  result_db.c  result_db.h  result_db_in_memory.c  result_db_sqlite.c  result_status.c  result_status.h  timer.c  timer.h  two_part_result.h
